[package]
name = "app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "1.3"
cassowary = "0.3"
unicode-segmentation = "1.2"
unicode-width = "0.1"
termion ="1.5"
crossterm = "0.25"
tui = "0.19"
rand = "0.8"
sysinfo = "0.28.4"
psutil = "3.2.2"
nix = "0.26.2"
users = "0.11.0"
humantime = "2.1.0" 